@startuml

' Configuration du style pour ressembler à votre diagramme
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 60

package "Système" {
    class Jeu {
        - iterationActuelle : int
        - maxIterations : int
        - grille : unique_ptr<Grille>
        - regle : unique_ptr<IRegleJeu>
        - vue : unique_ptr<IVue>
        + Jeu(fichierConfig : string, modeGraphique : bool)
        + lancer() : void
        + traiterLogique() : void
        + testUnitaire(attendu : const Grille&, iter : int) : bool
    }

    class Fichier {
        + Fichier()
        + lire(chemin : string, largeur : int&, hauteur : int&) : vector<vector<bool>>
    }
}

package "Noyau (Modèle)" {
    class Grille {
        - largeur : int
        - hauteur : int
        - cellules : vector<vector<Cellule>>
        + Grille(largeur : int, hauteur : int)
        + Grille(autre : const Grille&)
        + getLargeur() const : int
        + getHauteur() const : int
        + getCellule(x : int, y : int) : Cellule&
        + getCellule(x : int, y : int) const : const Cellule&
        + getCelluleMutable(x : int, y : int) : Cellule&
        + initCellule(x : int, y : int, etat : EtatCellule*) : void
        + compterVoisinsVivants(x : int, y : int) : int
        + actualiserToutesCellules(regle : const IRegleJeu&) : void
        + estVide() : bool
        + operator==(autre : const Grille&) : bool
    }

    class Cellule {
        - x : int
        - y : int
        - etatActuel : unique_ptr<EtatCellule>
        - etatSuivant : unique_ptr<EtatCellule>
        + Cellule(x : int, y : int, etatInitial : EtatCellule*)
        + ~Cellule()
        + preparerProchainEtat(nouvelEtat : EtatCellule*) : void
        + validerEtat() : void
        + estVivante() const : bool
        + getSymbole() const : char
        + getCoordonnees() const : pair<int, int>
        + getEtatActuel() const : const EtatCellule*
    }
}

package "Logique Métier (Patron Stratégie)" {
    interface IRegleJeu <<Interface>> {
        + {abstract} ~IRegleJeu()
        + {abstract} calculerProchainEtat(etatActuel : const EtatCellule&, nbVoisins : int) const : EtatCellule*
    }

    class RegleConway {
        + calculerProchainEtat(etatActuel : const EtatCellule&, nbVoisins : int) const : EtatCellule*
    }
}

package "Vues (MVC / Observer)" {
    interface IVue <<Interface>> {
        + {abstract} ~IVue()
        + {abstract} afficher(grille : const Grille&, iteration : int) : void
        + {abstract} gererEntree() : bool
        + {abstract} estEnPause() const : bool
        + {abstract} attendreToucheEntree() : bool
        + {abstract} estOuverte() const : bool
    }

    class VueConsole {
        - dossierSortie : string
        + VueConsole(dossierSortie : string)
        + afficher(grille : const Grille&, iteration : int) : void
        + gererEntree() : bool
        + estEnPause() const : bool
        + attendreToucheEntree() : bool
        + estOuverte() const : bool
    }

    class VueGraphique {
        - window : sf::RenderWindow
        - tailleCellule : float
        - enPause : bool
        - delaiMs : int
        - textureAide : sf::Texture
        - spriteAide : sf::Sprite
        - imageChargee : bool
        + VueGraphique(largeurGrille : int, hauteurGrille : int)
        + afficher(grille : const Grille&, iteration : int) : void
        + gererEntree() : bool
        + estEnPause() const : bool
        + attendreToucheEntree() : bool
        + estOuverte() const : bool
    }
}

package "États (Patron État)" {
    abstract class EtatCellule {
        + {abstract} ~EtatCellule()
        + {abstract} estVivante() const : bool
        + {abstract} getSymbole() const : char
        + {abstract} clone() const : EtatCellule*
    }

    class EtatVivant {
        + estVivante() const : bool
        + getSymbole() const : char
        + clone() const : EtatCellule*
    }

    class EtatMort {
        + estVivante() const : bool
        + getSymbole() const : char
        + clone() const : EtatCellule*
    }
}

' Relations
Jeu *-- "1" Grille : possède
Jeu *-- "1" IRegleJeu : utilise stratégie
Jeu *-- "1" IVue : délègue affichage
Jeu ..> Fichier : utilise

Grille *-- "*" Cellule : contient

Cellule *-- "1" EtatCellule : possède (actuel)

IRegleJeu <|.. RegleConway
IVue <|.. VueConsole
IVue <|.. VueGraphique

EtatCellule <|-- EtatVivant
EtatCellule <|-- EtatMort

@enduml